@startuml Database Schema

!define table(x) class x << (T,#FFAAAA) >>
!define primary_key(x) <u>x</u>
!define foreign_key(x) #x#

enum campaign_status {
    draft
    active
    paused
    completed
    cancelled
}

enum call_status {
    scheduled
    in_progress
    completed
    failed
    cancelled
    pending
}

table(campaigns) {
    primary_key(id): uuid
    name: varchar(255)
    description: text
    status: campaign_status
    schedule_start: timestamp
    schedule_end: timestamp
    script_template: text
    max_retries: integer
    retry_delay_minutes: integer
    calling_hours_start: time
    calling_hours_end: time
    pending_calls: integer
    total_calls: integer
    successful_calls: integer
    failed_calls: integer
    created_at: timestamp
    updated_at: timestamp
}

table(calls) {
    primary_key(id): uuid
    foreign_key(campaign_id): uuid
    phone_number: varchar(20)
    status: call_status
    call_sid: varchar(255)
    duration: integer
    recording_url: varchar(255)
    retry_count: integer
    scheduled_at: timestamp
    started_at: timestamp
    ended_at: timestamp
    created_at: timestamp
    updated_at: timestamp
}

table(contacts) {
    primary_key(id): uuid
    first_name: varchar(100)
    last_name: varchar(100)
    phone_number: varchar(20)
    email: varchar(255)
    custom_fields: jsonb
    created_at: timestamp
    updated_at: timestamp
}

table(campaign_contacts) {
    primary_key(id): uuid
    foreign_key(campaign_id): uuid
    foreign_key(contact_id): uuid
    call_status: varchar(50)
    call_count: integer
    last_call_at: timestamp
    created_at: timestamp
    updated_at: timestamp
}

' Relaciones
campaigns "1" -- "0..*" calls
campaigns "1" -- "0..*" campaign_contacts
contacts "1" -- "0..*" campaign_contacts

@enduml
